overflow x fixed for blogs and courses

--- a/src/index.css
+++ b/src/index.css
@@ -119,8 +119,24 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%; 
-}
 
+
+  -webkit-overflow-scrolling: auto;
+  -webkit-overflow-scrolling: touch;
+
+
+  ::-webkit-scrollbar {
+    width: 0px; 
+    height: 0px; 
+    background: transparent; 
+    }
+    
+    ::-webkit-scrollbar-thumb {
+    background: #FF0000;
+    }
+  
+  
+}
 
 
 
